5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1593_2425.log
== TEST (2019-03-25 19:28:39) 
-- CODE:
d = float(input("insira a distancia total: "))
c = float(input("insira o total de combustível: "))

med = d/c

print(round(med, 3)km/l)

-- ERROR:
File "XXXX", line 6
    print(round(med, 3)km/l)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:29:36) 
-- CODE:
d = float(input("insira a distancia total: "))
c = float(input("insira o total de combustível: "))

med = d/c

print(round(med, 3)) + (print(km/l))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(med, 3)) + (print(km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:30:06) 
-- CODE:
d = float(input("insira a distancia total: "))
c = float(input("insira o total de combustivel: "))

med = d/c

print(round(med, 3)) + (print(km/l))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(med, 3)) + (print(km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:31:17) 
-- CODE:
d = float(input("insira a distancia total: "))
c = float(input("insira o total de combustivel: "))

med = d/c

print(input(round(med, 3) km/l))


-- ERROR:
File "XXXX", line 6
    print(input(round(med, 3) km/l))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:32:08) 
-- CODE:
d = float(input("insira a distancia total: "))
c = float(input("insira o total de combustivel: "))

med = d/c

print(round(med, 3)) + print(input(km/l))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(med, 3)) + print(input(km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:33:44) 
-- CODE:
d = float(input("insira a distancia total: "))
c = float(input("insira o total de combustivel: "))

med = d/c

print(round(med, 3)) + print(input(km) + print(input(/)) + print(input(l))


-- ERROR:
File "XXXX", line 6
    print(round(med, 3)) + print(input(km) + print(input(/)) + print(input(l))
                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:34:21) 
-- CODE:
d = float(input("insira a distancia total: km"))
c = float(input("insira o total de combustivel: l"))

med = d/c

print(round(med, 3))


-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:34:57) 
-- CODE:
d = float(input("insira a distancia total: km"))
c = float(input("insira o total de combustivel: l"))

med = d/c

print(round(med, 3))


-- EXECUTION TIME:
0.160696
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:35:07) 
-- CODE:
d = float(input("insira a distancia total: km"))
c = float(input("insira o total de combustivel: l"))

med = d/c

print(round(med, 3))


-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:35:36) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))

med = d/c

print(round(med, 3))


-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:35:58) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))

med = dkm/cl

print(round(med, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    med = dkm/cl
NameError: name 'dkm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:36:35) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))

med = d/c *km/l

print(round(med, 3))


-- EXECUTION TIME:
0.201318
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 4, in <module>
    med = d/c *km/l
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:36:38) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))

med = d/c *km/l

print(round(med, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    med = d/c *km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:37:33) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))

med = d/c

print(round(med, 3)) print(input(km/l))


-- ERROR:
File "XXXX", line 6
    print(round(med, 3)) print(input(km/l))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:38:21) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))

med = d/c

print(round(med, 3) + (km/l)) 


-- EXECUTION TIME:
0.184964
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 6, in <module>
    print(round(med, 3) + (km/l)) 
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:38:24) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))

med = d/c

print(round(med, 3) + (km/l)) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(med, 3) + (km/l)) 
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:39:25) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))

med = d/c

print(round(med, 3) + (km) / (l)


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:39:35) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))

med = d/c

print(round(med, 3) + (km) / (l))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(med, 3) + (km) / (l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:40:24) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))
K = km
L = l
med = d/c

print(round(med, 3) + (K) / (L))


-- EXECUTION TIME:
0.196511
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 3, in <module>
    K = km
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:40:27) 
-- CODE:
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))
K = km
L = l
med = d/c

print(round(med, 3) + (K) / (L))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    K = km
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:41:15) 
-- CODE:
from math import km
from math import l
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))
K = km
L = l
med = d/c

print(round(med, 3) + (K) / (L))


-- EXECUTION TIME:
0.180862
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 1, in <module>
    from math import km
ImportError: cannot import name 'km'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:41:17) 
-- CODE:
from math import km
from math import l
d = float(input("insira a distancia total em km: "))
c = float(input("insira o total de combustivel em l: "))
K = km
L = l
med = d/c

print(round(med, 3) + (K) / (L))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import km
ImportError: cannot import name 'km'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:42:17) 
-- CODE:
d = float(input("insira a distancia total em km:  km "))
c = float(input("insira o total de combustivel em l:   l "))
K = km
L = l
med = d/c

print(round(med, 3) + (K) / (L))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    K = km
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:44:24) 
-- CODE:
d = float(input("insira a distancia total em km:  km "))
c = float(input("insira o total de combustivel em l:   l "))
D = d * km
C = c * l
med = D/C

print(round(med, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    D = d * km
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:45:09) 
-- CODE:
d = float(input("insira a distancia total em km:  km "))
c = float(input("insira o total de combustivel em l:   l "))
D = km
C = l
med = D/C

print(round(med, 3) + D + C)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    D = km
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:46:41) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
D = km
C = l
med = D/C

print(round(med, 3) + float(input(D/C)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    D = km
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:49:21) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))


med = d/c

print(round(med, 3) + km)


-- EXECUTION TIME:
0.196569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 7, in <module>
    print(round(med, 3) + km)
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:49:29) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))


med = d/c

print(round(med, 3) + km/l)


-- EXECUTION TIME:
0.132443
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 7, in <module>
    print(round(med, 3) + km/l)
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:49:31) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))


med = d/c

print(round(med, 3) + km/l)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(med, 3) + km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:53:12) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
km = d
l = c

med = d/c

print(round(med, 3) + (km/l))


-- EXECUTION TIME:
0.212126
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
36.23797106109325
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
19.6039801980198
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:53:14) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
km = d
l = c

med = d/c

print(round(med, 3) + (km/l))


-- OUTPUT:
28.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:53:50) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
km =km
l = l

med = d/c

print(round(med, 3) + (km/l))


-- EXECUTION TIME:
0.247922
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 3, in <module>
    km =km
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:53:54) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
km =km
l = l

med = d/c

print(round(med, 3) + (km/l))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    km =km
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:54:09) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
km =km
l = l

med = d/c

print(round(med, 3) (km/l))


-- EXECUTION TIME:
0.194001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 3, in <module>
    km =km
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:54:12) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
km =km
l = l

med = d/c

print(round(med, 3) (km/l))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    km =km
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:56:03) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
K = input(km)
L = input(l)

med = d/c

print(round(med, 3) + (K/L))


-- EXECUTION TIME:
0.21453
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 3, in <module>
    K = input(km)
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:56:45) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
K = input("km")
L = input("l")

med = d/c

print(round(med, 3) + (K/L))


-- EXECUTION TIME:
0.135575
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 3, in <module>
    K = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:56:49) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
K = input("km")
L = input("l")

med = d/c

print(round(med, 3) + (K/L))


-- EXECUTION TIME:
0.139437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 3, in <module>
    K = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:56:55) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
K = input("km")
L = input("l")

med = d/c

print(round(med, 3) + (K/L))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    K = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:57:42) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

med = d/c

print(round(med, 3) + float(input("km/l")))


-- EXECUTION TIME:
0.138651
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 6, in <module>
    print(round(med, 3) + float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:57:44) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

med = d/c

print(round(med, 3) + float(input("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(med, 3) + float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:58:19) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

med = d/c

print(round(med, 3) +(input("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(med, 3) +(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:58:26) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

med = d/c

print(round(med, 3) +(input("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(med, 3) +(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:59:04) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

med = d/c

print(round(med , 3) +(input("km/l")))


-- EXECUTION TIME:
0.118846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 6, in <module>
    print(round(med , 3) +(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:59:06) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

med = d/c

print(round(med , 3) +(input("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(med , 3) +(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:59:26) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

med = d/c

print(float(round(med , 3)) +(input("km/l")))


-- EXECUTION TIME:
0.136671
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 6, in <module>
    print(float(round(med , 3)) +(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:59:28) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

med = d/c

print(float(round(med , 3)) +(input("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(float(round(med , 3)) +(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:00:36) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(float(round(M , 3)) +(input("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(float(round(M , 3)) +(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:00:59) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(float(round(M , 3)) +(input("km/l"))


-- EXECUTION TIME:
0.135106
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 8
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:01:47) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(float(round(M, 3)) +(input("km/l"))


-- EXECUTION TIME:
0.139008
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 8
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:01:50) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(float(round(M, 3)) +(input("km/l"))


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:02:02) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(float(round(M, 3)) +(input("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(float(round(M, 3)) +(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:02:21) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(float(round(M, 3)) * (input("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(float(round(M, 3)) * (input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:03:10) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(float(round(M, 3))) + (input("km/l")))


-- EXECUTION TIME:
0.290478
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 6
    print(float(round(M, 3))) + (input()))
                                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:03:12) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(float(round(M, 3))) + (input("km/l")))


-- ERROR:
File "XXXX", line 6
    print(float(round(M, 3))) + (input()))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:03:32) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(float(round(M, 3)) + (input("km/l")))


-- EXECUTION TIME:
0.249155
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 6, in <module>
    print(float(round(M, 3)) + (input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:03:56) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(round(M, 3) + (input("km/l"))


-- EXECUTION TIME:
0.12296
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 8
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:04:36) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(round(M, 3) 

-- EXECUTION TIME:
0.196114
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:04:37) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(round(M, 3) 

-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:04:52) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print(round(M, 3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:05:30) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print((round(M, 3)) + (input("km/l")))


-- EXECUTION TIME:
0.160299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 6, in <module>
    print((round(M, 3)) + (input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:05:32) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

M = d/c

print((round(M, 3)) + (input("km/l")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print((round(M, 3)) + (input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:07:42) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
V = input("km/l")
M = d/c

print((round(M, 3)) + (input(V)))


-- EXECUTION TIME:
0.217141
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 3, in <module>
    V = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:09:35) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
V = input("km/l")
M = d/c

print((round(M, 3)) + (input(V)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    V = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:10:20) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))
V = input("km/l")
M = d/c

print(float((round(M, 3))) + (input(V)))


-- EXECUTION TIME:
0.13593
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 3, in <module>
    V = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:11:23) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = input("km/l")
m = d/c
 print(m)
-- EXECUTION TIME:
0.136757
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 6
    print(m)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:11:25) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = input("km/l")
m = d/c
 print(m)
-- ERROR:
File "XXXX", line 6
    print(m)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:13:03) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = input("km/l")
m = d/c
 print(round(m, 3))
-- EXECUTION TIME:
0.118674
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 6
    print(round(m, 3))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:13:05) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = input("km/l")
m = d/c
 print(round(m, 3))
-- ERROR:
File "XXXX", line 6
    print(round(m, 3))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:13:41) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = input("km/l")
m = d/c
 print(V)
-- ERROR:
File "XXXX", line 6
    print(V)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:13:51) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = input("km/l")
m = d/c
print(V)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    V = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:14:03) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = input("km/l")
m = d/c
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    V = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:14:25) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = input("km/l")
m = d/c
print(m)
-- EXECUTION TIME:
0.179888
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 4, in <module>
    V = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:14:28) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = input("km/l")
m = d/c
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    V = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:16:06) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = "km/l"
m = d/c
print(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:16:23) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = "km/l"
m = d/c
print(input(V))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(input(V))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:17:07) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))


m = d/c
print(round(m, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(m, 3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:17:42) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))


m = d/c
print(input(round(m, 3) + "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(input(round(m, 3) + "km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:18:17) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))


m = d/c
print(float(input(round(m, 3) + "km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(float(input(round(m, 3) + "km/l")))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:19:50) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = float(km/l)
m = d/c
print(round(m, 3) + (V))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    V = float(km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:20:44) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = km/l
m =input(d/c)
print(round(m, 3) + (V))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    V = km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:22:17) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

V = input(km/l)
m =input(d/c)
print(round(m, 3) + (V))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    V = input(km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:25:16) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =input(d/c)
print(input(round(m, 3) + ("km/l"))
-- EXECUTION TIME:
0.200473
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 6
    
                                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:25:17) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =input(d/c)
print(input(round(m, 3) + ("km/l"))
-- ERROR:
File "XXXX", line 6
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:25:42) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =input(d/c)
print(input(round(m, 3)) + ("km/l"))
-- EXECUTION TIME:
0.188869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 4, in <module>
    m =input(d/c)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:25:43) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =input(d/c)
print(input(round(m, 3)) + ("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m =input(d/c)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:26:07) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)) + ("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(input(round(m, 3)) + ("km/l"))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:26:41) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)) + ("km/l"))
-- EXECUTION TIME:
0.221785
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print(input(round(m, 3)) + ("km/l"))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:26:53) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) + ("km/l"))
-- EXECUTION TIME:
0.137113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print((round(m, 3)) + ("km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:26:55) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) + ("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print((round(m, 3)) + ("km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:27:21) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)) + ("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(input(round(m, 3)) + ("km/l"))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:28:09) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3))) + print(input("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(input(round(m, 3))) + print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:28:40) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)) + "km/l")
-- EXECUTION TIME:
0.183633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print(input(round(m, 3)) + "km/l")
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:28:43) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(input(round(m, 3)) + "km/l")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:28:58) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print((round(m, 3)) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:30:03) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)) + input("km/l"))
-- EXECUTION TIME:
0.138924
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print(input(round(m, 3)) + input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:30:38) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)) + input("km/l"))
-- EXECUTION TIME:
0.185858
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print(input(round(m, 3)) + input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:31:07) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)) + input("km/l")
-- ERROR:
File "XXXX", line 6
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:31:21) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3))) + input("km/l")
-- EXECUTION TIME:
0.127733
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print(input(round(m, 3))) + input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:31:56) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)) + float("km/l"))
-- EXECUTION TIME:
0.134285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print(input(round(m, 3)) + float("km/l"))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:31:59) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)) + float("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(input(round(m, 3)) + float("km/l"))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:32:52) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3))) + print("km/l")
-- EXECUTION TIME:
0.125715
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print(input(round(m, 3))) + print("km/l")
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:32:55) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3))) + print("km/l")
-- EXECUTION TIME:
0.207441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print(input(round(m, 3))) + print("km/l")
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:33:07) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3))) + print("km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(input(round(m, 3))) + print("km/l")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:34:12) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input(round(m, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(input(round(m, 3)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:34:43) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3))
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:35:00) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)))
-- EXECUTION TIME:
0.119159
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:35:02) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:36:05) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) "km/l")
-- EXECUTION TIME:
0.130535
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 5
    print((round(m, 3)) "km/l")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:36:07) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) "km/l")
-- ERROR:
File "XXXX", line 5
    print((round(m, 3)) "km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:36:26) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) + "km/l")
-- EXECUTION TIME:
0.127898
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print((round(m, 3)) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:36:28) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print((round(m, 3)) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:37:29) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) + float(km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print((round(m, 3)) + float(km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:39:18) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) * ("km/l"))
-- EXECUTION TIME:
0.145143
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print((round(m, 3)) * ("km/l"))
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:39:21) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) * ("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print((round(m, 3)) * ("km/l"))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:39:46) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) ("km/l"))
-- EXECUTION TIME:
0.153985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 5, in <module>
    print((round(m, 3)) ("km/l"))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:39:49) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) ("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print((round(m, 3)) ("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:40:25) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) input("km/l"))
-- EXECUTION TIME:
0.148816
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 5
    print((round(m, 3)) input())
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:40:46) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print((round(m, 3)) + float(input("km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print((round(m, 3)) + float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:42:32) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
print(input((round(m, 3)) ("km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(input((round(m, 3)) ("km/l")))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:44:00) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)
print(R + ("km/l")
-- EXECUTION TIME:
0.142103
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:44:02) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)
print(R + ("km/l")
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:44:11) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)
print(R + ("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(R + ("km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:44:32) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)
print(R  ("km/l"))
-- EXECUTION TIME:
0.128883
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 6, in <module>
    print(R  ("km/l"))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:45:06) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)
print("R + km/l")
-- OUTPUT:
R + km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:45:52) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)

print("round (m, 3) km/l")
-- OUTPUT:
round (m, 3) km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:47:41) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(input(R) + ("km/l")
-- ERROR:
File "XXXX", line 8
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:47:49) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(input(R) + ("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(R) + ("km/l"))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:49:11) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(("km/l"))
-- EXECUTION TIME:
0.201437
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:12:02) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(R 
-- ERROR:
File "XXXX", line 8
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:12:12) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(R)
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:13:46) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(R)
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:14:12) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(R)
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:14:52) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(R + (km))
-- EXECUTION TIME:
0.107773
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 7, in <module>
    print(R + (km))
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:15:30) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(R ,'km/l')
-- EXECUTION TIME:
0.143314
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:28:05) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(R ,'km/l')
-- EXECUTION TIME:
0.214114
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:28:06) 
-- CODE:
d = float(input("insira a distancia total em km:  "))
c = float(input("insira o total de combustivel em l:  "))

m =(d/c)
R = round(m, 3)

print(R ,'km/l')
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
